# binance-ai

./: .dockerignore  .env.example  .gitignore  AI_STATUS_SUMMARY.md  ARCHITECTURE.md  CHANGES_NOTE.md  DOCS_INDEX.md  Dockerfile  FE_IMPLEMENTATION_PRIORITY.md  FE_INTEGRATION_GUIDE.md  INSPECTION_REPORT.md  OPENAI_GUIDE.md  OPENAI_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_START_FE.md  README.md  REQUIREMENTS_ANALYSIS.md  SECURITY_FIX_MODEL_VERSION.md  TODO_IMPLEMENTATION.md  alembic.ini  dockerfile  main.py  main_simple.py  pyproject.toml  requirements.txt  test_openai.sh
alembic/: env.py
alembic/versions/: .gitkeep  2026_02_01_1200-add_price_predictions_table.py
app/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: ai_analytics.py  causal_analysis.py  chat.py  health.py  html_parser.py  news.py  sentiment.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  news.py  sentiment.py
app/schemas/: base.py  causal_analysis.py  chat.py  common.py  html_parser.py  news.py  price_prediction.py  sentiment.py
app/services/: base.py  causal_analysis_service.py  chat_service.py  html_parser_service.py  long_polling_service.py  news.py  prediction_line_service.py  price_prediction_crud.py  price_prediction_service.py  sentiment.py  sentiment_service.py
examples/: openai_usage_example.py
