[project]
name = "ai"
version = "0.1.0"
description = "AI Service for Crypto Trading Analysis - REST API for analyzing financial news and sentiment"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # Database & ORM
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    
    # Configuration & Environment
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Security (JWT & Password hashing)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # HTTP Client (for external APIs)
    "httpx>=0.27.0",
    
    # AI - OpenAI API only (no heavy local models)
    "openai>=1.54.0",
    
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",  # Linting & Formatting
    "mypy>=1.11.0",  # Type checking
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
migrations = [
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
